--- a/package.json
+++ b/package.json
@@ -1,24 +1,56 @@
 {
   "name": "slneemobile",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~45.0.0",
-    "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "@expo/config-plugins": "~6.0.0",
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
+    "deprecated-react-native-prop-types": "^4.1.0",
+    "expo": "^48.0.0",
+    "expo-av": "~13.2.1",
+    "expo-build-properties": "~0.6.0",
+    "expo-camera": "~13.2.1",
+    "expo-checkbox": "~2.3.1",
+    "expo-splash-screen": "~0.18.2",
+    "expo-status-bar": "~1.4.4",
+    "expo-system-ui": "~2.2.1",
+    "lottie-react-native": "5.1.4",
+    "native-notify": "^3.0.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-paper": "^5.8.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-reanimated-carousel": "^3.3.2",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-select-dropdown": "^3.3.3",
+    "react-native-svg": "13.4.0",
+    "react-native-svg-charts": "^5.4.0",
+    "react-native-web": "~0.18.10",
+    "react-redux": "^8.0.7",
+    "redux-persist": "^6.0.0",
+    "translate": "^2.0.2"
+  },
+  "resolutions": {
+    "@expo/config-plugins": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
